# supermarket_sales_predict

./: README.md  pyproject.toml
notebooks/: 01_knowing_data.ipynb
supermarket_sales/: ingest_data.py
