[tool.poetry]
name = "supermarket-sales"
version = "0.1.0"
description = ""
authors = ["vfamim <vfamim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.1.4"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.1.9"
httpx = "^0.26.0"
isort = "^5.13.2"
jupyterlab = "^4.0.10"
pytest = "^7.4.3"

[tool.ruff]
line-lenght = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = 'black'
line_lenght = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
